Updated dependencies to be compatible with Symfony 3

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 # @author Beñat Espiña <benatespina@gmail.com>
 # @author Gorka Laucirica <gorka.lauzirika@gmail.com>
 
-vendor
-composer.lock
+/vendor
+/composer.lock
