--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "symfony/yaml": "~2.3"
+        "symfony/yaml": "^2.3|^3.0"
     },
     "autoload": {
         "psr-4": {
